<resources>
    <string name="app_name">Ort app</string>
    <string name="nearby">Nearby</string>
    <string name="saved">Saved</string>
    <string name="maps">Maps</string>
    <string name="create_location">Create location</string>
    <string name="required">Required</string>
    <string name="search">Search</string>
    <string name="meters">%s m</string>
    <string name="kilometers">%s km</string>
    <string name="add_review">Add review</string>
    <string name="review_text">Review text</string>
    <string name="name">Name</string>
    <string name="new_review">New review</string>
    <string name="address">Address</string>
    <string name="rating">Rating</string>
</resources>