<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.orlovvv.ort.ui.OrtViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nearby_location_item"
                style="@style/ButtonStyle.NavigationItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/nearby"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_list_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_saved_location_item"
                style="@style/ButtonStyle.NavigationItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/saved"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_saved_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_nearby_location_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_maps_location_item"
                style="@style/ButtonStyle.NavigationItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/maps"
                android:textAlignment="textStart"
                app:icon="@drawable/ic_location_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_saved_location_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>